--- a/04-typography/index.html
+++ b/04-typography/index.html
@@ -5,26 +5,59 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="https://cdn.tailwindcss.com"></script>
+    <script>
+      tailwind.config = {
+        theme: {
+           fontFamily: {
+             sans: ['ui-sans-serif', 'system-ui'],
+             serif: ['ui-serif', 'Georgia'],
+             mono: ['ui-monospace', 'SFMono-Regular']
+           }
+        }
+      }
+    </script>
     <title>Typography</title>
   </head>
   <body>
     <!-- Font Family -->
-
+     <div class="font-sans">TW is awesome</div>
+     <div class="font-serif">TW is awesome</div>
+     <div class="font-mono">TW is awesome</div>
     <!-- Font Size -->
+    <div class="text-xs">TW is awesome</div>
+    <div class="text-sm">TW is awesome</div>
+    <div class="text-base">TW is awesome</div>
+    <div class="text-lg">TW is awesome</div>
+    <div class="text-xl">TW is awesome</div>
+    <div class="text-3xl">TW is awesome</div>
 
     <!-- Font Weight -->
-
+    <div class="font-light">TW is awesome</div>
+    <div class="font-normal">TW is awesome</div>
+    <div class="font-medium">TW is awesome</div >
+    <div class="font-semibold">TW is awesome</div>
+    <div class="font-bold">TW is awesome</div>
     <!-- Letter Spacing -->
+    <div class="tracking-tight">TW is awesome</div>
+    <div class="tracking-normal">TW is awesome</div>
+    <div class="tracking-wide ">TW is awesome</div>
 
     <!-- Text Alignment -->
-
+      <div class="text-left">TW is awesome</div>
+      <div class="text-right">TW is awesome</div>
+      <div class="text-center">TW is awesome</div>
     <!-- Text Decoration -->
-
-    <!-- Decoration Style -->
-
-    <!-- Decoration Offset -->
-
+    <div class="underline decoration-4 decoration-blue-400">TW is awesome</div>
+    <div class="underline decoration-double ">TW is awesome</div>
+    <div class="underline decoration-dotted">TW is awesome</div>
+    <div class="underline decoration-wavy">TW is awesome</div>
+    <div class="underline decoration-4 decoration-blue-400 underline-offset-8">TW is awesome</div>
     <!-- Text Transform -->
+    <p class="normal-case">TW is awesome</p>
+    <p class="uppercase">TW is awesome</p>
+    <p class="lowercase">TW is awesome</p>
+    <p class="capitalize">TW is awesome</p>
+
   </body>
 </html>
 
