--- a/05-sizing/index.html
+++ b/05-sizing/index.html
@@ -9,26 +9,44 @@
   </head>
   <body>
     <!-- Width -->
+    <div class="bg-black text-white w-4">Hello</div>
+    <div class="bg-black text-white w-48">Hello</div>
+    <div class="bg-black text-white w-96">Hello</div>
 
     <!-- Percentages -->
+    <div class="bg-green-700 text-white w-1/4">Hello</div>
+    <div class="bg-green-700 text-white w-1/3">Hello</div>
+    <div class="bg-green-700 text-white w-1/2">Hello</div>
 
     <!-- Width of the viewport -->
+    <div class="bg-blue-500 text-white w-screen">Hello</div>
 
     <!-- 100% of container -->
-
-    <!-- min/max content -->
-
+    <div class="bg-blue-300 text-white w-full">Hello</div>
     <!-- Arbitrary width -->
-
+    <div class="bg-blue-700 text-white w-[300px]">Hello</div>
     <!-- Max Width -->
-
+    <div class="bg-red-300 text-white max-w-sm">
+      Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello 
+      Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello 
+      Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello 
+    </div>
+    <div class="bg-red-300 text-white max-w-lg mx-auto"> 
+      Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello 
+      Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello 
+      Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello 
+    </div>
     <!-- Height (Most of the same options as widths) -->
-
-    <!-- Min Height -->
-
-    <!-- Max Height -->
-
+    <div class="flex items-end">
+      <div class="bg-orange-500 w-20 h-24">Hello</div>
+      <div class="bg-orange-500 w-20 h-32">Hello</div>
+      <div class="bg-orange-500 w-20 h-40">Hello</div>
+      <div class="bg-orange-500 w-20 h-48">Hello</div>
+      <div class="bg-orange-500 w-20 h-64">Hello</div>
+      <div class="bg-orange-500 w-20 h-96">Hello</div>
+    </div>
     <!-- Full screen height -->
+    <div class="bg-red-500 text-white h-screen">Hello</div>
   </body>
 </html>
 
