--- a/06-layout-position/index.html
+++ b/06-layout-position/index.html
@@ -9,28 +9,64 @@
   </head>
   <body>
     <!-- Positioning -->
-
+    <div class="relative h-12 bg-red-200 w-1/2">
+    <p>Parent Element</p>
+    <div class="absolute bottom-0 right-0 bg-red-500">Absolute Child</div>
+    </div>
     <!-- Top left corner -->
-
+    <div class="relative h-32 w-32 bg-yellow-200">
+      <div class="absolute left-0 top-0 h-16 w-16 bg-yellow-400"></div>
+    </div>
     <!-- Top right corner -->
-
+    <div class="relative h-32 w-32 bg-yellow-200">
+      <div class="absolute right-0 top-0 h-16 w-16 bg-yellow-400"></div>
+    </div>
     <!-- Bottom left corner -->
-
+    <div class="relative h-32 w-32 bg-yellow-200">
+      <div class="absolute left-0 bottom-0 h-16 w-16 bg-yellow-400"></div>
+    </div>
     <!-- Bottom right corner -->
-
+    <div class="relative h-32 w-32 bg-yellow-200">
+      <div class="absolute right-0 bottom-0 h-16 w-16 bg-yellow-400"></div>
+    </div>
     <!-- Span top edge -->
-
+    <div class="relative h-32 w-32 bg-yellow-200">
+      <div class="absolute inset-x-0 top-0 h-16 bg-yellow-400"></div>
+    </div>
     <!-- Span left edge -->
-
-    <!-- Span right edge -->
+    <div class="relative h-32 w-32 bg-yellow-200">
+      <div class="absolute inset-y-0 left-0 w-16 bg-yellow-400"></div>
+    </div>
+    <!-- Span right edge -->    
+    <div class="relative h-32 w-32 bg-yellow-200">
+      <div class="absolute inset-y-0 right-0 w-16 bg-yellow-400"></div>
+    </div>
 
     <!-- Span bottom edge -->
+    <div class="relative h-32 w-32 bg-yellow-200">
+      <div class="absolute inset-x-0 bottom-0 h-16 bg-yellow-400"></div>
+    </div>
 
     <!-- Display Classes -->
+    <div>
+      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent auctor efficitur pretium. In convallis augue vitae turpis maximus, vel suscipit mi elementum. <span class="inline text-red-700">This is inline</span> Etiam id tellus nec orci pharetra vulputate nec sit amet risus. Aliquam in faucibus nisl,<span class="inline-block text-blue-700">This is an inline block</span> non finibus orci. Curabitur sit amet bibendum urna, in vulputate dolor.<span class="block text-green-700">This is block</span> Nulla sit amet suscipit libero, nec venenatis quam. <span class="hidden">This is hidden</span>Suspendisse in neque lacus.
 
+      </div>
     <!-- Z-Index -->
-
+    <div class="relative h-36">
+      <div class="absolute left-10 w-24 h-24 bg-blue-300 z-40">1</div>
+      <div class="absolute left-20 w-24 h-24 bg-blue-400">2</div>
+      <div class="absolute left-40 w-24 h-24 bg-blue-500 z-10">3</div>
+      <div class="absolute left-60 w-24 h-24 bg-blue-600 z-20">4</div>
+      <div class="absolute left-80 w-24 h-24 bg-blue-700 z-30">5</div>
+    </div>
     <!-- Floats -->
+    <div class="w-1/4 p-4">
+      <img src="../assets/img/img1.jpg" alt="" class="h-48 w-48 float-left m-4"/>
+      <p>
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent auctor efficitur pretium. In convallis augue vitae turpis maximus, vel suscipit mi elementum. Etiam id tellus nec orci pharetra vulputate nec sit amet risus. Aliquam in faucibus nisl, non finibus orci. Curabitur sit amet bibendum urna, in vulputate dolor. Nulla sit amet suscipit libero, nec venenatis quam.Suspendisse in neque lacus.
+      </p>
+    </div>
   </body>
 </html>
 
