--- a/07-backgrounds-shadows/index.html
+++ b/07-backgrounds-shadows/index.html
@@ -9,12 +9,39 @@
   </head>
   <body>
     <!-- Background Classes -->
+    <div class="h-64 w-72 bg-no-repeat bg-cover bg-center" style="background-image: url('../assets/img/img1.jpg');"></div>
 
     <!-- Gradients -->
+    <div class="h-24 bg-gradient-to-r from-cyan-500 to-blue-500"></div>
+    <div class="h-24 bg-gradient-to-l from-cyan-500 to-blue-500"></div>
 
     <!-- Shadows -->
+    <div class="w-96 mt-6 ml-4 p-3 shadow">
+      Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minus voluptatum nobis, illo voluptate eveniet quod. Maiores nam, praesentium cupiditate quam unde accusantium rem omnis molestiae. Velit sint tenetur minima at.
+    </div>    
+    <div class="w-96 mt-6 ml-4 p-3 shadow-md">
+      Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minus voluptatum nobis, illo voluptate eveniet quod. Maiores nam, praesentium cupiditate quam unde accusantium rem omnis molestiae. Velit sint tenetur minima at.
+    </div>
+    <div class="w-96 mt-6 ml-4 p-3 shadow-lg">
+      Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minus voluptatum nobis, illo voluptate eveniet quod. Maiores nam, praesentium cupiditate quam unde accusantium rem omnis molestiae. Velit sint tenetur minima at.
+    </div>
+    <div class="w-96 mt-6 ml-4 p-3 shadow-2xl">
+      Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minus voluptatum nobis, illo voluptate eveniet quod. Maiores nam, praesentium cupiditate quam unde accusantium rem omnis molestiae. Velit sint tenetur minima at.
+    </div>    
+    <div class="w-96 mt-6 ml-4 p-3 shadow-2xl shadow-red-500">
+      Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minus voluptatum nobis, illo voluptate eveniet quod. Maiores nam, praesentium cupiditate quam unde accusantium rem omnis molestiae. Velit sint tenetur minima at.
+    </div>
+    <div class="w-96 mt-6 ml-4 p-3 shadow-2xl shadow-inner">
+      Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minus voluptatum nobis, illo voluptate eveniet quod. Maiores nam, praesentium cupiditate quam unde accusantium rem omnis molestiae. Velit sint tenetur minima at.
+    </div>
 
     <!-- Mix Blend -->
+    <div class="flex justify-center -space-x-24">
+      <div class="mix-blend-multiply bg-blue-400 text-white">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Exercitationem praesentium nihil amet, ad nesciunt atque cumque quaerat? Provident, inventore ea reprehenderit aspernatur minus facilis excepturi, cupiditate quisquam, culpa ad tempora?
+      </div>
+      <div class="mix-blend-multiply bg-pink-400 text-white">Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur numquam doloremque dolores illum natus dolor architecto ullam quia eum? Numquam beatae placeat eos atque cumque recusandae, asperiores unde eveniet nihil!
+      </div>
+    </div>
   </body>
 </html>
 
