--- a/08-borders/index.html
+++ b/08-borders/index.html
@@ -9,10 +9,39 @@
   </head>
   <body>
     <!-- Border Width & Colors -->
-
+    <div class="w-96 m-3 p-5 border">
+      Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eveniet placeat voluptatum laudantium neque adipisci error minus recusandae, distinctio unde quibusdam magnam illo a, repellendus culpa cupiditate quidem nesciunt, necessitatibus totam!s
+    </div>
+    <div class="w-96 m-3 p-5 border-2">
+      Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eveniet placeat voluptatum laudantium neque adipisci error minus recusandae, distinctio unde quibusdam magnam illo a, repellendus culpa cupiditate quidem nesciunt, necessitatibus totam!s
+    </div>
+    <div class="w-96 m-3 p-5 border-8 border-red-500">
+      Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eveniet placeat voluptatum laudantium neque adipisci error minus recusandae, distinctio unde quibusdam magnam illo a, repellendus culpa cupiditate quidem nesciunt, necessitatibus totam!s
+    </div>
+    <div class="w-96 m-3 p-5 border-x-4 border-blue-500">
+      Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eveniet placeat voluptatum laudantium neque adipisci error minus recusandae, distinctio unde quibusdam magnam illo a, repellendus culpa cupiditate quidem nesciunt, necessitatibus totam!s
+    </div>
+    <div class="w-96 m-3 p-5 border-y-4 border-green-500">
+      Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eveniet placeat voluptatum laudantium neque adipisci error minus recusandae, distinctio unde quibusdam magnam illo a, repellendus culpa cupiditate quidem nesciunt, necessitatibus totam!s
+    </div>
+    <div class="w-96 m-3 p-5 border-b-4 border-purple-500">
+      Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eveniet placeat voluptatum laudantium neque adipisci error minus recusandae, distinctio unde quibusdam magnam illo a, repellendus culpa cupiditate quidem nesciunt, necessitatibus totam!s
+    </div>
     <!-- Border Radius -->
-
+    <div class="w-96 m-3 p-5 border-4 rounded-lg border-cyan-300">
+      Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eveniet placeat voluptatum laudantium neque adipisci error minus recusandae, distinctio unde quibusdam magnam illo a, repellendus culpa cupiditate quidem nesciunt, necessitatibus totam!s
+    </div>
+    <div class="w-96 m-3 p-5 border-4 rounded-2xl border-cyan-300">
+      Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eveniet placeat voluptatum laudantium neque adipisci error minus recusandae, distinctio unde quibusdam magnam illo a, repellendus culpa cupiditate quidem nesciunt, necessitatibus totam!s
+    </div>
+    <div class="w-96 m-3 p-5 border-4 rounded-full border-cyan-600">
+      Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eveniet placeat voluptatum laudantium neque adipisci error minus recusandae, distinctio unde quibusdam magnam illo a, repellendus culpa cupiditate quidem nesciunt, necessitatibus totam!s
+    </div>
+    <div class="w-96 m-3 p-5 border-4 rounded-b-2xl border-cyan-300">
+      Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eveniet placeat voluptatum laudantium neque adipisci error minus recusandae, distinctio unde quibusdam magnam illo a, repellendus culpa cupiditate quidem nesciunt, necessitatibus totam!s
+    </div>
     <!-- Outline -->
+    <button class="outline outline-4 outline-offset-8 outline-red-400">Click</button>
   </body>
 </html>
 
