--- a/09-filters/index.html
+++ b/09-filters/index.html
@@ -9,16 +9,28 @@
   </head>
   <body>
     <!-- Blur -->
-
+    <div class="blur-sm">Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere nam aperiam maxime repellendus neque. Ab iusto ducimus ipsa consequuntur repellat incidunt quo similique? Qui sint fugiat non architecto accusantium fuga?</div>
+    <div class="blur-md">Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere nam aperiam maxime repellendus neque. Ab iusto ducimus ipsa consequuntur repellat incidunt quo similique? Qui sint fugiat non architecto accusantium fuga?</div>
+    <div class="blur-lg">Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere nam aperiam maxime repellendus neque. Ab iusto ducimus ipsa consequuntur repellat incidunt quo similique? Qui sint fugiat non architecto accusantium fuga?</div>
+    <img src="../assets/img/img1.jpg" alt="" class="blur-md"/>
+    <!-- Brightness -->
+    <img src="../assets/img/img2.jpg" alt="" class="brightness-100"/>
+    <img src="../assets/img/img2.jpg" alt="" class="brightness-150"/>
+    <img src="../assets/img/img2.jpg" alt="" class="brightness-50"/>
     <!-- Contrast -->
-
+    <img src="../assets/img/img3.jpg" alt="" class="contrast-100"/>
+    <img src="../assets/img/img3.jpg" alt="" class="contrast-50"/>
+    <img src="../assets/img/img3.jpg" alt="" class="contrast-200"/>
     <!-- Grayscale -->
-
+    <img src="../assets/img/img3.jpg" alt="" class="grayscale"/>
     <!-- Invert -->
-
+    <img src="../assets/img/img3.jpg" alt="" class="invert"/>
     <!-- Sepia -->
-
+    <img src="../assets/img/img3.jpg" alt="" class="sepia"/>
     <!-- Hue Rotate -->
+    <img src="../assets/img/img4.jpg" alt="" class="hue-rotate-90"/>
+    <img src="../assets/img/img4.jpg" alt="" class="hue-rotate-180"/>
+    <img src="../assets/img/img4.jpg" alt="" class="hue-rotate-270"/>
   </body>
 </html>
 
