--- a/10-interactivity/index.html
+++ b/10-interactivity/index.html
@@ -8,26 +8,60 @@
     <title>Interactivity</title>
   </head>
   <body>
+    <!-- Smooth Scroll Example -->
+    <a href="#id" class="block border border-black m-6 w-36 text-center">Smooth Scroll</a>
     <!-- Hover State Styling -->
+    <button class="bg-black text-white px-5 py-3 rounded-lg m-3 hover:bg-orange-500">Submit</button>
 
     <!-- Focus State Styling -->
+    <button class="bg-black text-white px-5 py-3 rounded-lg m-3 focus:bg-green-500">Submit</button>
 
     <!-- Active State Styling -->
+    <button class="bg-black text-white px-5 py-3 rounded-lg m-3 active:bg-yellow-500">Submit</button>
 
     <!-- Styling based on parent state -->
+    <a href="" class="group block max-w-xs mx-auto rounded-lg p-6 bg-white shadow-lg space-y-3 hover:bg-sky-500">
+      <h3 class="group-hover:text-white">Card Title</h3>
+      <p class="group-hover:text-white">This is the card text</p>
+    </a>
 
     <!-- Pseudo Classes -->
+    <ul>
+      <li class="first:bg-red-200 even:bg-red-500 odd:bg-blue-500">Item 1</li>
+      <li class="first:bg-red-200 even:bg-red-500 odd:bg-blue-500">Item 2</li>
+      <li class="first:bg-red-200 even:bg-red-500 odd:bg-blue-500">Item 3</li>
+      <li class="first:bg-red-200 even:bg-red-500 odd:bg-blue-500">Item 4</li>
+      <li class="first:bg-red-200 even:bg-red-500 odd:bg-blue-500">Item 5</li>
+      <li class="first:bg-red-200 even:bg-red-500 odd:bg-blue-500">Item 6</li>
+    </ul>
 
     <!-- Appearance -->
     <!-- Use appearance-none to reset any browser specific styling on an element. This utility is often used when creating custom form components. -->
-
+    <select name="" id="" class="appearance-none m-3">
+      <option value="yes">Yes</option>
+      <option value="no">No</option>
+    </select>
+    <br/>
     <!-- Cursor -->
+    <button class="bg-black text-white py-3 px-5 rounded-lg m-3">Submit</button>
+    <button class="bg-black text-white py-3 px-5 rounded-lg m-3 cursor-wait">Submit</button>
+    <button class="bg-black text-white py-3 px-5 rounded-lg m-3 cursor-crosshair">Submit</button>
+    <p class="cursor-pointer m-3">I am a pointer</p>
 
     <!-- Resize -->
+    <button class="bg-black text-white py-3 px-5 rounded-lg m-3 cursor-e-resize">Submit</button>
 
     <!-- User Select -->
+    <div class="select-none">Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae nisi dolorum dolores ullam nobis quam harum similique. Omnis praesentium voluptatibus aperiam earum unde. Laboriosam provident inventore molestiae quasi reiciendis reprehenderit.</div>
+    <div class="select-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae nisi dolorum dolores ullam nobis quam harum similique. Omnis praesentium voluptatibus aperiam earum unde. Laboriosam provident inventore molestiae quasi reiciendis reprehenderit.</div>
+    <div class="select-all">Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae nisi dolorum dolores ullam nobis quam harum similique. Omnis praesentium voluptatibus aperiam earum unde. Laboriosam provident inventore molestiae quasi reiciendis reprehenderit.</div>
+    <div class="select-auto">Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae nisi dolorum dolores ullam nobis quam harum similique. Omnis praesentium voluptatibus aperiam earum unde. Laboriosam provident inventore molestiae quasi reiciendis reprehenderit.</div>
 
     <!-- Smooth Scroll Example -->
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus animi cupiditate unde perspiciatis, illum excepturi laboriosam qui eligendi dolores voluptates, doloribus veniam minus incidunt optio, sint autem molestiae non tenetur dolorem cumque rerum! Illum sint maxime vel expedita asperiores debitis suscipit nostrum reprehenderit magni cumque, fuga nesciunt sunt tempore dolore. Omnis, esse velit error vel quas repellendus quis natus odit excepturi expedita cumque porro aliquam sint officiis ipsum quidem provident perferendis. Voluptatum error illum nam nihil praesentium tempora numquam quidem cumque quas pariatur incidunt autem eligendi, distinctio iste ab, qui maxime molestiae tempore enim nemo sequi cupiditate nobis. Earum quod explicabo nostrum cum expedita delectus possimus nemo tempora, sed alias ab id minima, porro magni incidunt! Eligendi eum debitis assumenda quos rerum, corporis praesentium, ducimus dolores, sunt nulla dolor. Atque excepturi, nostrum quos rerum, similique sint id officia reprehenderit dolore amet voluptatibus iusto expedita corrupti odio, repellat aliquam earum odit assumenda doloremque corporis distinctio rem sit alias et. Vitae aut odio cum maxime quia omnis autem, corporis voluptatem nobis, dolorem labore dignissimos eius voluptas, officia commodi culpa? Dignissimos, illum at similique alias accusantium, porro saepe nihil suscipit optio quas aspernatur? Odio voluptas id odit aliquid numquam itaque optio amet. Similique nobis nihil iste rerum suscipit recusandae, praesentium distinctio ratione, magni sint, facere totam. Nemo et suscipit ab, culpa totam autem placeat sed necessitatibus, unde, doloribus accusamus saepe minima. Vel corporis nam quaerat delectus natus ipsum officia asperiores mollitia quia maiores tempore expedita, illum velit, placeat quidem molestiae accusantium. Quisquam doloremque ipsam perspiciatis modi officia, natus tempora aspernatur neque delectus assumenda quos nesciunt perferendis nisi, ex eveniet, ea deleniti porro accusamus. Tempora reiciendis nulla ipsa nisi provident. Dolorum enim voluptate temporibus unde dignissimos nesciunt cumque blanditiis quibusdam ad maiores, ex, sapiente quos voluptatum est minus possimus! Modi labore minus ratione voluptate ipsum sequi optio, deleniti cum suscipit unde blanditiis numquam! Hic necessitatibus nemo exercitationem veritatis veniam labore dicta, maxime ab placeat. Aut sint corporis dolore excepturi animi soluta rerum. Qui aperiam laboriosam officia alias saepe voluptate numquam consectetur inventore. Quibusdam, dignissimos quia non perferendis cupiditate commodi expedita aspernatur itaque dolor dolores officia error repudiandae earum labore blanditiis eveniet impedit accusantium sapiente molestiae et consequuntur. Excepturi, distinctio, ad similique mollitia tempore blanditiis vel quia, eius temporibus numquam doloremque sapiente harum odit voluptatibus. Perferendis, ea, cupiditate porro accusamus voluptatibus nostrum aliquam consequatur cum blanditiis voluptatem iste reiciendis saepe ab modi ducimus? Beatae, quas?</p>
+    <div class="pt-[800px] bg-black text-white" >
+      <p id="id">Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae, amet, atque delectus voluptas assumenda beatae alias rerum perferendis aut nobis esse sequi. Rerum molestiae reprehenderit repellat qui sit accusamus unde officiis, est cumque beatae laudantium ullam dicta adipisci perspiciatis. Doloremque quam fugiat adipisci totam nesciunt autem inventore aut. Doloribus, necessitatibus.</p>
+    </div>
   </body>
 </html>
 
