--- a/11-breakpoints/index.html
+++ b/11-breakpoints/index.html
@@ -8,7 +8,19 @@
     <title>Breakpoints & Media Queries</title>
   </head>
   <!-- Tailwind is mobile-first -->
-  <body></body>
+  <body class="bg-black sm:bg-green-800 md:bg-blue-700 lg:bg-red-600 xl:bg-cyan-700 2xl:bg-purple-700">
+    <h1 class="text-white text-xl md:text-3xl lg:text-5xl xl:text-8xl"></h1>
+    <script>
+      function showBrowserWidth() {
+        const width = window.innerWidth;
+
+        document.querySelector('h1').innerHTML = `Width: ${width}px`;
+      }
+
+      window.onload = showBrowserWidth;
+      window.onresize = showBrowserWidth;
+    </script>
+  </body>
 </html>
 
 <!-- Breakpoint Classes
