--- a/17-customization/index.html
+++ b/17-customization/index.html
@@ -5,14 +5,42 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="https://cdn.tailwindcss.com"></script>
+    <script>
+      tailwind.config = {
+        theme: {
+            screens: {
+              sm: '520px',
+              md: '800px',
+              lg: '1200px',
+              xl: '1440px'
+            },
+            fontFamily: {
+              sans: ['Graphik', 'sans-serif'],
+              serif: ['Merriweather', 'serif'],
+            },
+            extend: {
+              colors: {
+                primary: '#ff5733',
+                secondary: '#fffc33'
+              },
+              spacing: {
+                bigboi: '32rem'
+              },
+              borderRadius: {
+                circleboi: '50rem'
+              }
+            }
+        }
+      }
+    </script>
     <title>Customization</title>
   </head>
   <body
     class="bg-black sm:bg-green-800 md:bg-primary lg:bg-yellow-800 xl:bg-purple-800 2xl:bg-orange-800"
   >
-    <h1 class="text-white text-xl md:text-3xl xl:text-5xl">
-      Tailwind is awesome
-    </h1>
+  <div class="border border-secondary p-6 max-w-sm mx-auto mt-bigboi rounded-circleboi">
+    <h1 class="text-primary text-xl md:text-white md:text-3xl xl:text-5xl"></h1>
+  </div>
 
     <script>
       function showBrowserWidth() {
@@ -21,10 +49,10 @@
           document.documentElement.clientWidth ||
           document.body.clientWidth
 
-        document.querySelector('h1').innerHTML = `Width: ${width}`
+        document.querySelector('h1').innerHTML = `Width: ${width}`;
       }
-      window.onload = showBrowserWidth
-      window.onresize = showBrowserWidth
+      window.onload = showBrowserWidth;
+      window.onresize = showBrowserWidth;
     </script>
   </body>
 </html>
